--- a/biohrafiya.html
+++ b/biohrafiya.html
@@ -73,8 +73,8 @@
                 <div class="col-lg-4 col-md-12 text-center footer-text">
                     <p>
                         Контакти:<br />
-                        Твердюк Анатолій +380988378748 <br />
-                        Твердюк Тетяна +380969096467
+                        Твердюк Анатолій  <br />
+                        Твердюк Тетяна 
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-12 media-footers">
