--- a/imagens.html
+++ b/imagens.html
@@ -205,9 +205,8 @@
                 <div class="col-lg-4 col-md-12 text-center footer-text">
                     <p>
                         Контакти:<br />
-                        Твердюк Анатолій +380988378748 <br />
-                        Твердюк Тетяна +380969096467
-                    </p>
+                        Твердюк Анатолій  <br />
+                        Твердюк Тетяна                    </p>
                 </div>
                 <div class="col-lg-4 col-md-12 media-footers">
                     <img style="width: 40px; margin-inline: 1em" src="sourse/files/tg.png" alt="" />
