--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="sourse/files/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="sourse/files/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="sourse/files/favicon_io/site.webmanifest">
-    
+
     <title>TVERDYUKI</title>
 </head>
 
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="travel.html">Подорожі</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="The_highlights.html">Найяскравіші моменти</a>
+                            <a class="nav-link" href="The_highlights.html">Найкращі моменти</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://web.telegram.org"><img
@@ -199,8 +199,8 @@
                 <div class="col-lg-4 col-md-12 text-center footer-text">
                     <p>
                         Контакти:<br />
-                        Твердюк Анатолій  <br />
-                        Твердюк Тетяна 
+                        Твердюк Анатолій <br />
+                        Твердюк Тетяна
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-12 media-footers">
